cluster/apps/wg-easy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - wg.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wg-easy-ui
          port: 51822
