cluster/apps/wg-easy/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  hosts:
  - wg.${domain_name}
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: wg-easy-ui.wg-easy.svc.cluster.local
        port:
          number: 51822
    match:
    - authority:
        exact: wg.${domain_name}
      uri:
        prefix: /
